--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <!-- facebook Open Graph meta tags -->
+    <meta property="og:title" content="Patrik Dahl | Portfolio" />
+    <meta property="og:url" content="PatrikDahl.dk" />
+    <meta property="og:image" content="./../src/assets/img/decoration/icons/PatiaLogo_Basic.png" />
+    <!-- <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" /> -->
+    <meta property="og:type" content="website" />
+    <meta property="og:description"
+        content="Patrik Dahl | LÆRENEM &#x2022; KREATIV &#x2022; SØGER ARBEJDE" />
+    <meta property="og:locale" content="en" />
+    <!-- facebook Open Graph meta tags ends here -->
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
+    <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="./../src/assets/img/decoration/icons/Icons_Bolt2.png">
+    <title>Patrik Dahl | Portfolio</title>
+    <meta name="title" content="Patrik Dahl | portfolio" />
+    <meta name="description"
+        content="Patrik Dahl | LÆRENEM &#x2022; KREATIV &#x2022; SØGER ARBEJDE">
+    <meta name="keywords"
+        content="Mediegrafiker, Grafiker, Typograf, Designer, Medie, Photoshop, Illustrator, InDesign, portfolio, Frontend">
+    <meta name="robots" content="all" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- PWA stuff goes here -->
+    <link rel="manifest" href="./manifest.json" defer>
+    <!-- <script src="./serviceWorker.js" defer></script> -->
+    <meta name="theme-color" content="#ffb6e7"/>
+    <link rel="apple-touch-icon" href="./../src/assets/assets/img/decoration/icons/appIcons/AppIcon_180x180.png">
+    <meta name="color-scheme" content="light only">
+    
+    <script defer>
+          if (navigator && navigator.serviceWorker) {
+      navigator.serviceWorker.register('/serviceWorker.js')
+      .then((reg) => console.log('Service worker is registreded',reg))
+      .catch((err) => console.log('Service worker is not registreded',err))
+    }
+    </script>
+</head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
