Om Mig finished

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <!-- facebook Open Graph meta tags ends here -->
 
     <meta charset="UTF-8">
-    <link rel="icon" type="image/png" href="./../src/assets/img/decoration/icons/Icons_Bolt2.png">
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/seoIcons/GreenLogoMini.svg">
     <title>Patrik Dahl | Portfolio</title>
     <meta name="title" content="Patrik Dahl | portfolio" />
     <meta name="description"
