Mobile almost done

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
     <!-- PWA stuff goes here -->
     <link rel="manifest" href="./manifest.json" defer>
-    <!-- <script src="./serviceWorker.js" defer></script> -->
+    <script src="%PUBLIC_URL%/serviceWorker.js" defer></script>
     <meta name="theme-color" content="#ffb6e7"/>
     <link rel="apple-touch-icon" href="./../src/assets/assets/img/decoration/icons/appIcons/AppIcon_180x180.png">
     <meta name="color-scheme" content="light only">
