--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta property="og:image:height" content="630" /> -->
     <meta property="og:type" content="website" />
     <meta property="og:description"
-        content="Patrik Dahl | LÆRENEM &#x2022; KREATIV &#x2022; SØGER ARBEJDE" />
+        content="Patrik Dahl | Lærenem &#x2022; Kreativ &#x2022; Søger arbejde" />
     <meta property="og:locale" content="en" />
     <!-- facebook Open Graph meta tags ends here -->
 
@@ -25,20 +25,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- PWA stuff goes here -->
-    <link rel="manifest" href="./manifest.json" defer>
-    <script src="%PUBLIC_URL%/serviceWorker.js" defer></script>
-    <meta name="theme-color" content="#ffb6e7"/>
-    <link rel="apple-touch-icon" href="./../src/assets/assets/img/decoration/icons/appIcons/AppIcon_180x180.png">
-    <meta name="color-scheme" content="light only">
     
-    <script defer>
-          if (navigator && navigator.serviceWorker) {
-      navigator.serviceWorker.register('/serviceWorker.js')
-      .then((reg) => console.log('Service worker is registreded',reg))
-      .catch((err) => console.log('Service worker is not registreded',err))
-    }
-    </script>
 </head>
   <body>
     <div id="root"></div>
